fixed issue with Album View not displaying at 100% height if content is too short

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -1665,6 +1665,9 @@
 
 	/* Artist View
 	---------------------------------------------------------------------------- */
+	#view_artist {
+		min-height: 100%;
+	}
 	/* --- Artist Header --- */
 	#view_artist [data-component="artist-albums"] [data-component="artist-header"] {
 		position: relative;
